Add administration Part: user management + metrics + health

--- a/epi/src/main/webapp/assets/styles/main.css
+++ b/epi/src/main/webapp/assets/styles/main.css
@@ -1860,7 +1860,7 @@ a.gallery-link, a[data-toggle=lightbox-image] {
 
 #error-container h1 {
 	font-size: 96px;
-	color: #fff;
+	color: #777;
 	margin-bottom: 40px
 }
 
