--- a/epi/src/main/webapp/scripts/components/sidebar/sidebar.html
+++ b/epi/src/main/webapp/scripts/components/sidebar/sidebar.html
@@ -55,25 +55,25 @@
 
 					<ul class="collapse" uib-collapse="collapseVar!=3">
 
-						<li ui-sref-active="active"><a ui-sref="user-management"><span
+						<li ><a ui-sref-active="active" ui-sref="user-management"><span
 								class="glyphicon glyphicon-user"></span> &#xA0;<span
 								translate="global.menu.admin.user-management">User
 									management</span></a></li>
 
-						<li ui-sref-active="active"><a ui-sref="class-management"><span
+						<li ><a ui-sref-active="active" ui-sref="class-management"><span
 								class="fa fa-users"></span> &#xA0;<span
 								translate="global.menu.admin.class-management">Class
 									Management</span></a></li>
 
-						<li ui-sref-active="active"><a ui-sref="metrics"><span
+						<li ><a ui-sref-active="active" ui-sref="metrics"><span
 								class="glyphicon glyphicon-dashboard"></span> &#xA0;<span
 								translate="global.menu.admin.metrics">Metrics</span></a></li>
 
-						<li ui-sref-active="active"><a ui-sref="health"><span
+						<li ><a ui-sref-active="active" ui-sref="health"><span
 								class="glyphicon glyphicon-heart"></span> &#xA0;<span
 								translate="global.menu.admin.health">Health</span></a></li>
 
-						<li ui-sref-active="active"><a ui-sref="audits"><span
+						<li ><a ui-sref-active="active" ui-sref="audits"><span
 								class="glyphicon glyphicon-bell"></span> &#xA0;<span
 								translate="global.menu.admin.audits">Audits</span></a></li>
 
