Navigation + topic sidebar link

--- a/epi/src/main/webapp/scripts/components/sidebar/sidebar.html
+++ b/epi/src/main/webapp/scripts/components/sidebar/sidebar.html
@@ -70,10 +70,17 @@
 
 						<li><a ui-sref-active="active"
 							ui-sref="school-year-management"><span
-								class="glyphicon glyphicon-folder-open
+								class="glyphicon glyphicon-calendar
 								"></span> &#xA0;<span
 								translate="global.menu.admin.schoolYear-management">School
 									year Management</span></a></li>
+									
+									
+						<li><a ui-sref-active="active"
+							ui-sref="topic-management"><span
+								class="glyphicon glyphicon-folder-open
+								"></span> &#xA0;<span
+								translate="global.menu.admin.topic-management">Topic Management</span></a></li>
 
 						<li><a ui-sref-active="active" ui-sref="metrics"><span
 								class="glyphicon glyphicon-dashboard"></span> &#xA0;<span
